# DC-SGG

./: .gitignore  README.md  pyproject.toml
data/blocksworld/: derived.pddl  domain.pddl
data/blocksworld/annotated_bboxes/: problem1.json  problem10.json  problem2.json  problem3.json  problem4.json  problem5.json  problem6.json  problem7.json  problem8.json  problem9.json
data/blocksworld/problems/: problem1.pddl  problem10.pddl  problem2.pddl  problem3.pddl  problem4.pddl  problem5.pddl  problem6.pddl  problem7.pddl  problem8.pddl  problem9.pddl
data/cooking/: derived.pddl  domain.pddl
data/cooking/annotated_bboxes/: problem1.json  problem10.json  problem2.json  problem3.json  problem4.json  problem5.json  problem6.json  problem7.json  problem8.json  problem9.json
data/cooking/instructions/: problem1.txt  problem2.txt  problem4.txt  problem5.txt  problem6.txt  problem7.txt  problem8.txt  problem9.txt
data/cooking/problems/: problem1.pddl  problem10.pddl  problem2.pddl  problem3.pddl  problem4.pddl  problem5.pddl  problem6.pddl  problem7.pddl  problem8.pddl  problem9.pddl
data/hanoi/: derived.pddl  domain.pddl
data/hanoi/annotated_bboxes/: problem1.json  problem10.json  problem2.json  problem3.json  problem4.json  problem5.json  problem6.json  problem7.json  problem8.json  problem9.json
data/hanoi/instructions/: problem5.txt
data/hanoi/problems/: problem1.pddl  problem10.pddl  problem2.pddl  problem3.pddl  problem4.pddl  problem5.pddl  (+4 more)
src/dcsgg/: part1_goal_parsing_object_detection.py  part2_spatial_semantic_mapping.py  part3_planning.py
(+558 files in other folders)
